--- a/StickyNote/index.html
+++ b/StickyNote/index.html
@@ -3,11 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The web site of testingrange</title>
-    <!-- The style.css file allows you to change the look of your web pages.
-         If you include the next line in all your web pages, they will all share the same look.
-         This makes it easier to make new pages for your site. -->
-    <!-- <link href="/style.css" rel="stylesheet" type="text/css" media="all"> -->
+    <title>YOUR SITE NAME</title>
+    <link href="/base.css" rel="stylesheet" type="text/css" media="all">
+    <link href="/topper.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
   
